--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <h1>MEMORY GAME</h1>
     <div id="game"></div>
-    <button id="reset">Reset</button>
+    <!-- <button id="reset">Reset</button> -->
     <script src="script.js"></script>
   </body>
 </html>
