add score tally

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <h1>MEMORY GAME</h1>
+    <h3>Score: <span class="score">0</span></h3>
     <div id="game"></div>
     <!-- <button id="reset">Reset</button> -->
     <script src="script.js"></script>
